--- a/.i3/config
+++ b/.i3/config
@@ -119,6 +119,8 @@ bindsym Mod1+Shift+0 move container to workspace 10
 # move focused workspace to monitor direction
 bindsym Mod1+Mod4+Left move workspace to output left
 bindsym Mod1+Mod4+Right move workspace to output right
+bindsym Mod1+Mod4+Up move workspace to output up
+bindsym Mod1+Mod4+Down move workspace to output down
 
 # reload the configuration file
 bindsym Mod1+Shift+c reload
