--- a/.i3/config
+++ b/.i3/config
@@ -28,7 +28,7 @@ bindsym Mod1+Return exec i3-sensible-terminal
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run
+bindsym Mod1+d exec dmenu_run -i -nf '#888888' -nb '#222222' -sb '#676d3d' -sf '#FFFFFF'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -170,15 +170,15 @@ bindsym Mod1+r mode "resize"
 # finds out, if available)
 bar {
   colors {
-    background #000000
-    statusline #ffffff
-    separator #666666
+         background #111111
+         statusline #ebdbb2
+         separator #323232
 
-    #type             border    background   font
-    focused_workspace  #008fff #666666 #ffffff
-    active_workspace   #333333 #222222 #ffffff
-    inactive_workspace #333333 #222222 #888888
-    urgent_workspace   #aa0000 #990000 #ffffff
+                            #border backgr. text
+         focused_workspace  #676d3d #676d3d #ebdbb2
+         active_workspace   #323232 #5f676a #ebdbb2
+         inactive_workspace #323232 #323232 #888888
+         urgent_workspace   #333333 #900000 #ffffff
   }
   status_command ~/.i3/conky
   position bottom
@@ -197,6 +197,7 @@ bar {
 
 
 #intended for i3 compiled from https://github.com/Airblader/i3
+#i3-gaps
 
 new_window none
 hide_edge_borders both
@@ -212,3 +213,14 @@ bindsym Mod1+Shift+plus gaps inner all minus 10
 
 bindsym Mod1+minus gaps inner current plus 10
 bindsym Mod1+plus gaps inner current minus 10
+
+
+#Startup applications
+
+#start background processes
+exec --no-startup-id /usr/bin/nm-applet
+exec_always --no-startup-id i3-msg 'exec_always /usr/bin/feh --bg-scale ~/.i3/wallpaper.png &
+
+#start programs
+exec_always --no-startup-id i3-msg 'workspace $ws1;exec_always /usr/bin/chromium-browser'
+exec_always --no-startup-id i3-msg 'workspace $ws2;exec_always /usr/bin/terminator'
