--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -10,15 +10,15 @@
 [profiles]
   [[default]]
     scrollbar_position = hidden
-    palette = "#000000:#cd0000:#00cd00:#cdcd00:#1e90ff:#cd00cd:#00cdcd:#e5e5e5:#4c4c4c:#ff0000:#00ff00:#ffff00:#4682b4:#ff00ff:#00ffff:#ffffff"
-    background_image = None
-    background_darkness = 0.31
-    background_type = transparent
     use_system_font = False
+    background_darkness = 0.49
+    background_type = transparent
+    background_image = None
     cursor_color = "#deff00"
-    foreground_color = "#00ff00"
+    foreground_color = "#c0ff00"
     show_titlebar = False
     font = Monospace 9
+    background_color = "#002b36"
     scrollback_infinite = True
 [layouts]
   [[default]]
