--- a/.i3/config
+++ b/.i3/config
@@ -93,15 +93,16 @@ bindsym Mod1+Shift+Tab move scratchpad
 bindsym Mod1+Tab scratchpad show
 
 
-set $ws1 1 - www
-set $ws2 2 - terminal
-set $ws3 3 - editor
-set $ws4 4
-set $ws5 5
-set $ws6 6
-set $ws7 7
-set $ws8 8
-set $ws9 9
+set $ws1 [ 1 ]
+set $ws2 [ 2 ]
+set $ws3 [ 3 ]
+set $ws4 [ 4 ]
+set $ws5 [ 5 ]
+set $ws6 [ 6 ]
+set $ws7 [ 7 ]
+set $ws8 [ 8 ]
+set $ws9 [ 9 ]
+set $ws0 [ 0 ]
 
 # switch to workspace
 bindsym Mod1+1 workspace $ws1
@@ -113,7 +114,7 @@ bindsym Mod1+6 workspace $ws6
 bindsym Mod1+7 workspace $ws7
 bindsym Mod1+8 workspace $ws8
 bindsym Mod1+9 workspace $ws9
-bindsym Mod1+0 workspace 10
+bindsym Mod1+0 workspace $ws0
 
 # move focused container to workspace
 bindsym Mod1+Shift+1 move container to workspace $ws1
