--- a/.i3/config
+++ b/.i3/config
@@ -126,7 +126,7 @@ bindsym Mod1+Shift+6 move container to workspace $ws6
 bindsym Mod1+Shift+7 move container to workspace $ws7
 bindsym Mod1+Shift+8 move container to workspace $ws8
 bindsym Mod1+Shift+9 move container to workspace $ws9
-bindsym Mod1+Shift+0 move container to workspace 10
+bindsym Mod1+Shift+0 move container to workspace $ws0
 
 # move focused workspace to monitor direction
 bindsym Mod1+Mod4+Left move workspace to output left
