--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -12,16 +12,16 @@
 [profiles]
   [[default]]
     scrollbar_position = hidden
-    palette = "#101010:#b19ea0:#646b45:#54513c:#332539:#362339:#576a67:#f8f8f8:#65737e:#d8c0c3:#c3d8c0:#d8d5c0:#c0c3d8:#d5c0d8:#c0d8d5:#ffffff"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     background_image = None
     background_darkness = 0.73
     background_type = transparent
     use_system_font = False
     cursor_color = "#ffffff"
-    foreground_color = "#bfc5cb"
+    foreground_color = "#d0d9da"
     show_titlebar = False
     font = Monospace 9
-    background_color = "#2c333b"
+    background_color = "#3d3d3d"
     scrollback_infinite = True
 [layouts]
   [[default]]
