--- a/.config/i3/compton.conf
+++ b/.config/i3/compton.conf
@@ -3,10 +3,11 @@ shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 10;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-# shadow-opacity = 0.7;
+shadow-radius = 8;
+shadow-offset-x = -4;
+shadow-offset-y = -4;
+shadow-opacity = 0.3;
+
 # shadow-red = 0.0;
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
@@ -22,28 +23,28 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 0.9;
-inactive-opacity = 0.9;
-active-opacity = 0.99;
+menu-opacity = 0.95;
+inactive-opacity = 1;
+active-opacity = 1;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
-alpha-step = 0.03;
+alpha-step = 0.01;
 #inactive-dim = 0.2;
 # inactive-dim-fixed = true;
-# blur-background = true;
-# blur-background-frame = true;
+blur-background = true;
+blur-background-frame = false;
 blur-kern = "3x3box";
-# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-# blur-background-fixed = true;
+blur-method = "kawase";
+blur-strength = 12;
+blur-background-fixed = true;
 blur-background-exclude = [
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
+	#"window_type = 'dock'",
+	#"window_type = 'desktop'",
+	#"_GTK_FRAME_EXTENTS@:c"
 ];
-opacity-rule = [ "100:class_i *?= 'vlc'" ];
 
 # Fading
-fading = true;
+#fading = true;
 # fade-delta = 30;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
@@ -52,14 +53,14 @@ fade-out-step = 0.03;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender";
+backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = "opengl-swc";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
@@ -70,7 +71,7 @@ focus-exclude = [ "name *?= 'vlc'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
-# resize-damage = 1;
+#resize-damage = 5;
 
 # GLX backend
 # glx-no-stencil = true;
@@ -85,6 +86,9 @@ glx-swap-method = "undefined";
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+	tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+	dropdown_menu = { shadow = false; };
+	popup_menu    = { shadow = false; };
+	utility       = { shadow = false; };
 };
 
