--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,14 +27,18 @@ set $green              #B5BD56
 floating_modifier Mod1
 
 # start a terminal
-bindsym Mod1+Return exec --no-startup-id bash -c "terminator -p 'Chalk'"
+bindsym Mod1+Return exec --no-startup-id bash -c "alacritty"
 
 # kill focused window
 bindsym Mod1+Shift+q kill
 
-bindsym Mod1+d exec --no-startup-id bash -c "bash -c 'rofi -theme /usr/share/rofi/themes/lb.rasi -show run'"
+bindsym Mod1+d exec --no-startup-id bash -c "bash -c 'rofi -theme /usr/share/rofi/themes/android_notification.rasi -show run'"
 
 exec_always --no-startup-id bash -c "feh --bg-fill ~/.config/i3/wallpaper.png"
+
+#maybe make some gnome shit work? no idea.
+exec --no-startup-id /usr/libexec/gnome-settings-daemon-localeexec
+exec --no-startup-id dconf write /org/gnome/settings-daemon/plugins/cursor/active false
 
 # change focus
 bindsym Mod1+h focus left
@@ -169,16 +173,14 @@ bindsym Escape mode "default"
 
 bindsym Mod1+r mode "resize"
 
-#exec_always --no-startup-id bash -c ' nvidia-settings --assign CurrentMetaMode="DP-4: nvidia-auto-select +0+0 {ForceCompositionPipeline=On}, DP-2: nvidia-auto-select +2560+0 {ForceCompositionPipeline=On}"'
+exec_always --no-startup-id bash -c 'killall polybar || true && sleep 1 && ~/Git/dotfiles/scripts/current_monitor.sh && polybar --config=/home/lucas/.config/i3/polybar top &'
 
+exec_always --no-startup-id bash -c 'killall picom || true && sleep 1 && picom --experimental-backends --backend glx --config ~/.config/i3/picom.conf -b'
 
-
-exec_always --no-startup-id bash -c 'killall polybar'
-exec_always --no-startup-id bash -c 'sleep 1 && polybar top &'
-
-exec_always --no-startup-id bash -c 'killall compton'
-exec_always --no-startup-id bash -c 'sleep 1 && compton --config ~/.config/i3/compton.conf -b'
-
+exec_always --no-startup-id gsettings set org.gnome.settings-daemon.plugins.xsettings overrides "[{'Gdk/WindowScalingFactor', <2>}, {'Xft/DPI', <196608>}, {'Xcursor/Size', <25000>}, {'Xcursor/size', <25000>}]"
+exec_always --no-startup-id gsettings set org.gnome.desktop.interface cursor-size 33
+exec_always --no-startup-id xrdb -merge /home/lucas/.Xresources
+exec_always --no-startup-id xrandr --dpi 130
 #enable transparency support with -t
 #bar {
 #	#i3bar_command exec --no-startup-id bash -c "polybar top1 &; polybar top0 &"
@@ -234,8 +236,7 @@ client.urgent           $bordercolor $none $none $none $none
 client.background	$none $none $none $none $none
 
 gaps inner 30
-gaps outer -10
-border_radius 15
+gaps outer 0
 
 
 bindsym Mod1+Shift+minus gaps inner all plus 10
@@ -249,13 +250,4 @@ bindsym Mod1+s exec xscreensaver-command -activate
 
 #Startup applications
 
-#start background processes
-exec --no-startup-id /usr/bin/nm-applet
-exec_always --no-startup-id /usr/bin/feh --bg-scale ~/.config/i3/wallpaper.png
-
-#start programs
-exec_always --no-startup-id i3-msg 'workspace $ws1;exec_always /usr/bin/chromium-browser'
-exec_always --no-startup-id i3-msg 'workspace $ws2;exec_always /usr/bin/terminator'
-
 floating_minimum_size 200 x 200
-
