--- a/.config/i3/picom.conf
+++ b/.config/i3/picom.conf
@@ -38,7 +38,7 @@ blur-background-exclude = [
 ];
 
 # Fading
-fading = false
+fading = true
 fade-delta = 1;
 fade-in-step = 0.01;
 fade-out-step = 0.01;
